--- a/app/views/nouns/edit.html.erb
+++ b/app/views/nouns/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @noun %> |
-<%= link_to 'Back', nouns_path %>
+<%= link_to 'Show', @thing %> |
+<%= link_to 'Back', things_path %>
