--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Nouns</h1>
+<h1>Listing Things</h1>
 
 <table>
   <thead>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Noun', new_thing_path %>
+<%= link_to 'New Thing', new_thing_path %>
