--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -1,3 +1,122 @@
 // Place all the styles related to the things controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.action a {
+  font-size: 9px;
+  color: #666;
+  img {
+    filter: alpha(opacity = 50);
+    -moz-opacity: 0.50;
+    opacity: 0.50;
+    &:hover {
+      filter: alpha(opacity = 100);
+      -moz-opacity: 1.0;
+      opacity: 1.0;
+    }
+  }
+}
+
+/*******************************
+ Thing Details */
+
+/*#thing-details > div{ padding: 4px; }*/
+
+#thing-details {
+  #path {
+    margin-bottom: 0px;
+  }
+  #name-description {
+    background: #D6D6EA;
+    border: 1px solid #ccc;
+    padding: 4px;
+    display: inline-block;
+    width: 390px;
+    #name {
+      font-size: 22px;
+      color: #222;
+      padding-top: 4px;
+    }
+    #description {
+      font-style: italic;
+      color: #666;
+      padding: 4px;
+    }
+  }
+  #container {
+    color: #888;
+    padding: 0px;
+  }
+  #cost, #weight, #value, #dimensions, #acquisition_date {
+    display: none;
+  }
+  #contained {
+    color: #666;
+    width: 400px;
+    padding: 0px;
+    margin-top: 20px;
+    #header {
+      padding: 0px;
+      height: 18px;
+      margin-bottom: 1px;
+      #contains {
+        font-size: 110%;
+      }
+    }
+    #toolbar {
+      float: right;
+      padding: 0px;
+      margin-right: 4px;
+      a img {
+        /*  border: 1px solid #ccc; */
+        padding: 0px;
+        /*  background: #ddd;*/
+        filter: alpha(opacity = 80);
+        -moz-opacity: 0.80;
+        opacity: 0.80;
+      }
+    }
+  }
+}
+
+#things-list {
+  width: 400px;
+  border: 2px solid #888;
+  padding: 0px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow: auto;
+  background: #ddd;
+  .child {
+    padding: 1px 3px;
+    border-bottom: 1px solid #aaa;
+    font-size: 11px;
+    color: #666;
+    .num_contained {
+      color: #666;
+    }
+    .actions {
+      float: right;
+      position: relative;
+      top: 3px;
+      a#marked! {}
+    }
+    &.odd {
+      background: #F0E6E3;
+    }
+    &.even {
+      background: #DDEAE8;
+    }
+  }
+  #nothing {
+    padding: 4px;
+    font-style: italic;
+    font-size: 90%;
+  }
+}
+
+#thing-details #contained #things-list {
+  width: 396px;
+  min-height: 300px;
+  max-height: 300px;
+}
