--- a/app/views/things/edit.html.erb
+++ b/app/views/things/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Thing</h1>
 
-<%= render 'form' %>
+<%= render 'form', locals: {containers: @containers} %>
 
 <%= link_to 'Show', @thing %> |
 <%= link_to 'Back', things_path %>
