--- a/app/views/things/new.html.erb
+++ b/app/views/things/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Thing</h1>
 
-<%= render 'form' %>
+<%= render 'form', locals: {containers: @containers} %>
 
 <%= link_to 'Back', things_path %>
