--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -1,34 +1,74 @@
-<p id="notice"><%= notice %></p>
+<div id="thing-details">
+  <div id="name-description">
+    <div id="name">
+      <%=h @thing.name %>
+      <span id="marked" class="action"><%= link_to "<img src='/images/icons/lightbulb#{ @thing.marked ? "" : "_off" }.png' >", url_for(:controller=>:things, :action=>:toggle_marked, :id=>@thing.id), :title=>'Marked', :id=>"#{@thing.id}_marked", :class=>"remote" %></span>
+      <span id="edit" class="action"><%= link_to '<img src="/images/icons/page_edit.png">', edit_thing_path(@thing, :className=>"thing edit-thing", :width=>300, :ref=>CGI::escape(request.fullpath)), :title=>"Edit #{@thing.name}", :class=>"thickbox" %></span>
+      <span id="delete" class="action"><%= link_to '<img src="/images/icons/delete.png">', @thing, :confirm => "Are you sure you want to delete #{@thing.name}?", :method => :delete, :title=>"Delete #{@thing.name}"  %></span>
 
-<p>
-  <strong>Name:</strong>
-  <%= @thing.name %>
-</p>
+    </div>
 
-<p>
-  <strong>Parent:</strong>
-  <%= @thing.parent_id %>
-</p>
+    <div id="description">
+      <%=h @thing.description %>
+    </div>
+    <div id="container">
+      <% parent = @thing.container %>
+      <% if parent %>
+        <div id="path">
+          <% while parent %>
+          < <a href='<%=url_for(parent)%>'><%=parent.name%></a>
+          <% parent = parent.container %>
+          <% end %>
+        </div>
+      <% else %>
+        <b>No container</b>
+      <% end -%>
+    </div>
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @thing.description %>
-</p>
 
-<p>
-  <strong>Aquired on:</strong>
-  <%= @thing.aquired_on %>
-</p>
 
-<p>
-  <strong>Cost:</strong>
-  <%= @thing.cost %>
-</p>
+  <div id="cost">
+    <b>Cost:</b>
+    <%=h @thing.cost %>
+  </div>
 
-<p>
-  <strong>Value:</strong>
-  <%= @thing.value %>
-</p>
+  <div id="value">
+    <b>Value:</b>
+    <%=h @thing.value %>
+  </div>
 
-<%= link_to 'Edit', edit_thing_path(@thing) %> |
-<%= link_to 'Back', things_path %>
+  <div id="dimensions">
+    <%=h @thing.depth %>"x<%=h @thing.width %>"x<%=h @thing.height %>"
+  </div>
+
+  <div id="weight">
+    <%=h @thing.weight %>
+  </div>
+
+  <div id="acquisition_date">
+    <b>Acquisition date:</b>
+    <%=h @thing.acquired_on %>
+  </div>
+
+  <div id="contained">
+    <div id="header">
+      <span id="contains">Contains:</span>
+      <div id="toolbar">
+        <span class="action"><%= link_to '<img src="/images/icons/add.png">', url_for(:controller=>:things, :action=>:new, :container_id=>@thing.id, :width=>"300", :ref=>CGI::escape(request.fullpath)), :title=>'Add Contained Thing', :class=>"thickbox" %></span>
+      </div>
+    </div>
+    <div id="things-list">
+      <% if !@thing.contained.blank? %>
+        <% @thing.contained.each do |thing| %>
+          <%= render :partial=>'thing_row', :locals=>{:thing=>thing, :odd_even=>(cycle("odd","even"))} %>
+        <% end -%>
+      <% else %>
+        <span id="nothing">Does not contain anything.</span>
+      <% end -%>
+    </div>
+  </div>
+</div>
+
+<br/>
+<%= render :partial=>'quick_search' %>
