--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -2,7 +2,7 @@
   <div id="name-description">
     <div id="name">
       <%=h @thing.name %>
-      <span id="marked" class="action"><%= link_to "<img src='/images/icons/lightbulb#{ @thing.marked ? "" : "_off" }.png' >", url_for(:controller=>:things, :action=>:toggle_marked, :id=>@thing.id), :title=>'Marked', :id=>"#{@thing.id}_marked", :class=>"remote" %></span>
+      <span id="marked" class="action"><%= link_to "<img src='/images/icons/lightbulb#{ @thing.marked ? "" : "_off" }.png' >", toggle_marked_thing_path(@thing), :title=>'Marked', :id=>"#{@thing.id}_marked", :remote=>true %></span>
       <span id="edit" class="action"><%= link_to '<img src="/images/icons/page_edit.png">', edit_thing_path(@thing, :className=>"thing edit-thing", :width=>300, :ref=>CGI::escape(request.fullpath)), :title=>"Edit #{@thing.name}", :class=>"thickbox" %></span>
       <span id="delete" class="action"><%= link_to '<img src="/images/icons/delete.png">', @thing, :confirm => "Are you sure you want to delete #{@thing.name}?", :method => :delete, :title=>"Delete #{@thing.name}"  %></span>
 
@@ -15,7 +15,7 @@
       <% parent = @thing.container %>
       <% if parent %>
         <div id="path">
-          <% while parent %>
+          <% while parent && parent.tree_depth > 0%>
           < <a href='<%=url_for(parent)%>'><%=parent.name%></a>
           <% parent = parent.container %>
           <% end %>
