Basic Things manipulation functional

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,5 +5,9 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-// @import "scaffolds";
+$dimmed-color: #bbb;
+$marked-color: #222;
+
+@import "fonts";
 @import "things";
+
