--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -2,9 +2,21 @@
   <div id="name-description">
     <div id="name">
       <%=h @thing.name %>
-      <span id="marked" class="action"><%= link_to "<img src='/images/icons/lightbulb#{ @thing.marked ? "" : "_off" }.png' >", toggle_marked_thing_path(@thing), :title=>'Marked', :id=>"#{@thing.id}_marked", :remote=>true %></span>
-      <span id="edit" class="action"><%= link_to '<img src="/images/icons/page_edit.png">', edit_thing_path(@thing, :className=>"thing edit-thing", :width=>300, :ref=>CGI::escape(request.fullpath)), :title=>"Edit #{@thing.name}", :class=>"thickbox" %></span>
-      <span id="delete" class="action"><%= link_to '<img src="/images/icons/delete.png">', @thing, :confirm => "Are you sure you want to delete #{@thing.name}?", :method => :delete, :title=>"Delete #{@thing.name}"  %></span>
+      <span id="marked" class="action">
+        <%= link_to(toggle_marked_thing_path(@thing), title: 'Toggle Marked', id: "#{@thing.id}_marked", remote: true, data: {type: 'script'}) do %>
+          <%= icon('check-square', '', class: @thing.marked ? "dimmed marked" : "dimmed") %>
+        <% end %>
+      </span>
+      <span id="edit" class="action">
+        <%= link_to(edit_thing_path(@thing, ref: CGI::escape(request.fullpath)), title: "Edit #{@thing.name}", class: "thickbox") do %>
+          <%= icon('edit', '') %>
+        <% end %>
+      </span>
+      <span id="delete" class="action">
+        <%= link_to(@thing, confirm: "Are you sure you want to delete #{@thing.name}?", method: :delete, title: "Delete #{@thing.name}" ) do %>
+          <%= icon('minus-square', '', class: "danger")  %>
+        <% end %>
+      </span>
 
     </div>
 
@@ -61,7 +73,7 @@
     <div id="things-list">
       <% if !@thing.contained.blank? %>
         <% @thing.contained.each do |thing| %>
-          <%= render :partial=>'thing_row', :locals=>{:thing=>thing, :odd_even=>(cycle("odd","even"))} %>
+          <%= render :partial=>'thing_row', locals: {thing: thing, odd_even: (cycle("odd","even"))} %>
         <% end -%>
       <% else %>
         <span id="nothing">Does not contain anything.</span>
