--- a/app/assets/stylesheets/themes/cyborg/_bootswatch.scss
+++ b/app/assets/stylesheets/themes/cyborg/_bootswatch.scss
@@ -167,38 +167,38 @@ a.list-group-item {
   &.active:focus {
     border-color: $list-group-border;
   }
+}
 
-  &-success {
-    &.active {
-      background-color: $state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-success-bg, 5%);
-    }
+a.list-group-item-success {
+  &.active {
+    background-color: $state-success-bg;
   }
 
-  &-warning {
-    &.active {
-      background-color: $state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-warning-bg, 5%);
-    }
+  &.active:hover,
+  &.active:focus {
+    background-color: darken($state-success-bg, 5%);
+  }
+}
+
+a.list-group-item-warning {
+  &.active {
+    background-color: $state-warning-bg;
   }
 
-  &-danger {
-    &.active {
-      background-color: $state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken($state-danger-bg, 5%);
-    }
+  &.active:hover,
+  &.active:focus {
+    background-color: darken($state-warning-bg, 5%);
+  }
+}
+
+a.list-group-item-danger {
+  &.active {
+    background-color: $state-danger-bg;
+  }
+
+  &.active:hover,
+  &.active:focus {
+    background-color: darken($state-danger-bg, 5%);
   }
 }
 
