--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="<%= things_path %>">My Things</a>
+      <a class="navbar-brand" href="<%= things_path %>">Containers</a>
     </div>
   </div>
 </nav>
