--- a/app/views/things/new.html.erb
+++ b/app/views/things/new.html.erb
@@ -1,5 +1,13 @@
 <h1>New Thing</h1>
-
-<%= render 'form', locals: {containers: @containers} %>
+<%= form_for(@thing, html: {class: "form-horizontal"}) do |f| %>
+  <div class="row">
+    <div class="col-lg-6">
+      <%= render partial: 'form', locals: {containers: @containers, f: f} %>
+      <div class="actions">
+        <%= f.submit "Create", class: "btn btn-success" %>
+      </div>
+    </div>
+  </div>
+<% end %>
 
 <%= link_to 'Back', things_path %>
