--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -1,23 +1,80 @@
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h5>
+      <%= link_to(edit_thing_path(@thing, ref: CGI::escape(request.fullpath)), title: "Edit #{@thing.name}", class: "thickbox") do %>
+        <%=h @thing.name %>
+      <% end %>
+      <div class="actions">
+        <span id="marked" class="action">
+          <%= link_to(toggle_marked_thing_path(@thing), title: 'Toggle Marked', class: "#{@thing.id}_marked", remote: true, data: {type: 'script'}) do %>
+            <%= icon(icon_marked, '', class: @thing.marked ? "dimmed marked" : "dimmed") %>
+          <% end %>
+        </span>
+        <span class="action">
+          <%= link_to(new_thing_path(parent_id: @thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing', class: "thickbox") do %>
+            <%= icon(icon_add, '', class: "success") %>
+          <% end %>
+        </span>
+      </div>
+    </h5>
+    <div id="description">
+      <%=h @thing.description %>
+    </div>
+    <div id="container">
+      <% parent = @thing.container %>
+      <% if parent %>
+        <div id="path">
+          <% while parent && parent.tree_depth > 0%>
+          < <a href='<%=url_for(parent)%>'><%=parent.name%></a>
+          <% parent = parent.container %>
+          <% end %>
+        </div>
+      <% else %>
+        <b>No container</b>
+      <% end -%>
+    </div>
+  </div>
+  <div class="panel-body">
+    <div id="contained">
+      <div id="header">
+        <div id="toolbar">
+        </div>
+      </div>
+      <div id="things-list">
+        <% if !@thing.contained.blank? %>
+          <% @thing.contained.each do |thing| %>
+            <%= render :partial=>'thing_row', locals: {thing: thing, odd_even: (cycle("odd","even"))} %>
+          <% end -%>
+        <% else %>
+          <span id="nothing">Does not contain anything.</span>
+        <% end -%>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 <div id="thing-details">
   <div id="name-description">
     <div id="name">
-      <%=h @thing.name %>
-      <span id="marked" class="action">
-        <%= link_to(toggle_marked_thing_path(@thing), title: 'Toggle Marked', id: "#{@thing.id}_marked", remote: true, data: {type: 'script'}) do %>
-          <%= icon(icon_marked, '', class: @thing.marked ? "dimmed marked" : "dimmed") %>
-        <% end %>
-      </span>
-      <span id="edit" class="action">
-        <%= link_to(edit_thing_path(@thing, ref: CGI::escape(request.fullpath)), title: "Edit #{@thing.name}", class: "thickbox") do %>
-          <%= icon(icon_edit, '') %>
-        <% end %>
-      </span>
-      <span id="delete" class="action">
-        <%= link_to(@thing, confirm: "Are you sure you want to delete #{@thing.name}?", method: :delete, title: "Delete #{@thing.name}" ) do %>
-          <%= icon(icon_delete, '', class: "danger")  %>
-        <% end %>
-      </span>
-
+      <span><%=h @thing.name %></span>
+      <div class="actions">
+        <span id="marked" class="action">
+          <%= link_to(toggle_marked_thing_path(@thing), title: 'Toggle Marked', class: "#{@thing.id}_marked", remote: true, data: {type: 'script'}) do %>
+            <%= icon(icon_marked, '', class: @thing.marked ? "dimmed marked" : "dimmed") %>
+          <% end %>
+        </span>
+        <span id="edit" class="action">
+          <%= link_to(edit_thing_path(@thing, ref: CGI::escape(request.fullpath)), title: "Edit #{@thing.name}", class: "thickbox") do %>
+            <%= icon(icon_edit, '') %>
+          <% end %>
+        </span>
+        <span id="delete" class="action">
+          <%= link_to(@thing, confirm: "Are you sure you want to delete #{@thing.name}?", method: :delete, title: "Delete #{@thing.name}" ) do %>
+            <%= icon(icon_delete, '', class: "danger")  %>
+          <% end %>
+        </span>
+      </div>
     </div>
 
     <div id="description">
