--- a/app/views/things/toggle_marked.js.erb
+++ b/app/views/things/toggle_marked.js.erb
@@ -1,5 +1,5 @@
 var marked = <%= @thing.marked %>;
-var element = $('#<%= @thing.id %>_marked i');
+var element = $('.<%= @thing.id %>_marked i');
 if(marked)
   element.addClass('marked');
 else
