--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -1,94 +1,5 @@
-// Place all the styles related to the things controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-// .action a {
-//   font-size: 9px;
-//   color: #666;
-//   img {
-//     filter: alpha(opacity = 50);
-//     -moz-opacity: 0.50;
-//     opacity: 0.50;
-//     &:hover {
-//       filter: alpha(opacity = 100);
-//       -moz-opacity: 1.0;
-//       opacity: 1.0;
-//     }
-//   }
-// }
-
-/*******************************
- Thing Details */
-
-/*#thing-details > div{ padding: 4px; }*/
-
-#thing-details {
-  #path {
-    margin-bottom: 0px;
-  }
-  #name-description {
-    background: #D6D6EA;
-    border: 1px solid #ccc;
-    padding: 4px;
-    display: inline-block;
-    width: 390px;
-    #name {
-      font-size: 1.5em;
-      color: #222;
-      padding-top: 4px;
-    }
-    #description {
-      font-style: italic;
-      color: #666;
-      padding: 4px;
-    }
-    .actions {
-      margin-left: 1em;
-      display: inline;
-      padding: 0.1em;
-      background: $gray-light;
-      border-radius: 3px;
-      .action a {
-        font-size: 1em;
-        // @extend .btn;
-        // @extend .btn-primary;
-        // @extend .btn-xs;
-        // margin-right: 0.6em;
-        i.fa {
-          // font-size: 2em;
-          // font-weight: bold;
-          @extend .fa-fw;
-        }
-      }
-    }
-  }
-  #container {
-    color: #888;
-    padding: 0px;
-  }
-  #cost, #weight, #value, #dimensions, #acquisition_date {
-    display: none;
-  }
-  #contained {
-    color: #666;
-    width: 400px;
-    padding: 0px;
-    margin-top: 20px;
-    #header {
-      padding: 0px;
-      height: 18px;
-      margin-bottom: 1px;
-      #contains {
-        font-size: 110%;
-      }
-    }
-    #toolbar {
-      float: right;
-      padding: 0px;
-      margin-right: 4px;
-    }
-  }
-}
+// @import "base";
+@import "styleguide";
 
 #things-list {
   width: 400px;
@@ -140,4 +51,14 @@
   width: 396px;
   min-height: 300px;
   max-height: 300px;
+}
+
+.thing.panel {
+  .panel-heading {
+    .actions {
+      // opacity: 0.5;
+      display: inline;
+      margin-left: 0.5em;
+    }
+  }
 }
