--- a/app/assets/stylesheets/_bootstrap_base.scss
+++ b/app/assets/stylesheets/_bootstrap_base.scss
@@ -2,6 +2,6 @@
 @import "bootstrap-sprockets";
 // SASS doesn't allow variables in imports.  To change themes, you need
 // to the theme name on each line before and after the bootstrap import.
-@import "themes/paper/variables.scss";
+@import "themes/sandstone/variables.scss";
 @import "bootstrap/variables";
 // @import "bootstrap/mixins";
