--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,3 @@
 @import "bootstrap_base";
 @import "bootstrap";
-@import "themes/paper/bootswatch.scss";
+@import "themes/sandstone/bootswatch.scss";
