--- a/app/assets/stylesheets/themes/sandstone/_bootswatch.scss
+++ b/app/assets/stylesheets/themes/sandstone/_bootswatch.scss
@@ -7,8 +7,8 @@
 // Navbar =====================================================================
 
 .sandstone {
-  font-size: 11px;
-  line-height: 22px;
+  font-size: $font-size-base;
+  line-height: $font-size-base * 2;
   font-weight: 500;
   text-transform: uppercase;
 }
