--- a/app/views/layouts/example.html.erb
+++ b/app/views/layouts/example.html.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%%= content_for?(:title) ? yield(:title) : "BootEx" %></title>
-    <%%= csrf_meta_tags %>
+    <title><%= content_for?(:title) ? yield(:title) : "Example" %></title>
+    <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -13,14 +13,14 @@
     <![endif]-->
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
+    <%= yield(:page_stylesheet) if content_for?(:page_stylesheet) %>
     <%= csrf_meta_tags %>
 
   </head>
   <body>
 
 
-    <%%= yield %>
+    <%= yield %>
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -376,6 +376,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <%%= yield(:page_javascript) if content_for?(:page_javascript) %>
+    <%= yield(:page_javascript) if content_for?(:page_javascript) %>
   </body>
 </html>
