--- a/app/views/things/_thing_row.html.erb
+++ b/app/views/things/_thing_row.html.erb
@@ -10,10 +10,14 @@
     <%= link_to(toggle_marked_thing_path(thing), title: 'Toggle Marked', class: "#{thing.id}_marked", remote: true) do %>
       <%= icon(icon_marked, '', class: thing.marked ? "dimmed marked" : "dimmed") %>
     <% end %>
-    <%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: "thickbox") do %>
+    <%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: "thickbox",
+          :"data-toggle" => "modal",
+          :"data-target" => "#basicModal") do %>
       <%= icon(icon_edit, '', class: 'primary') %>
     <% end %>
-    <%= link_to(new_thing_path(parent_id: thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing', class: "thickbox") do %>
+    <%= link_to(new_thing_path(parent_id: thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing',
+          :"data-toggle" => "modal",
+          :"data-target" => "#basicModal") do %>
       <%= icon(icon_add, '', class: "success") %>
     <% end %>
   </span>
