Add jquery-ui css and refactor SASS partials

--- a/app/assets/stylesheets/_styleguide.css.scss
+++ b/app/assets/stylesheets/_styleguide.css.scss
@@ -1,2 +1,18 @@
+//
+// Bootstrap Variable Overrides
+//
+
+// Typography
+
+$font-size-base: 16px;
+$line-height-base: 1.8;
+
+
+//
+// Custom Application Variables
+//
+
+// Colors
+
 $dimmed-color: #bbb;
 $marked-color: #222;
