--- a/app/assets/stylesheets/_bootstrap_base.scss
+++ b/app/assets/stylesheets/_bootstrap_base.scss
@@ -1,3 +1,4 @@
+@import "styleguide";
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 // SASS doesn't allow variables in imports.  To change themes, you need
