--- a/app/assets/stylesheets/themes/sandstone/_bootswatch.scss
+++ b/app/assets/stylesheets/themes/sandstone/_bootswatch.scss
@@ -8,7 +8,7 @@
 
 .sandstone {
   font-size: $font-size-base;
-  line-height: $font-size-base * 2;
+  line-height: $line-height-base;
   font-weight: 500;
   text-transform: uppercase;
 }
