Add single-word autocomplete for QuickSearch

--- a/app/views/things/_quick_search.html.erb
+++ b/app/views/things/_quick_search.html.erb
@@ -1,4 +1,4 @@
-<div id="quick-search">
+<div id="quick-search" class="ui-widget">
   <form action="<%= things_path %>" >
     <input type="text" name="query" val="">
     <input type="submit" name="commit" value="Quick Search">
