Cleanup thing forms.  Add submit input back for ENTER submit

--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -46,3 +46,5 @@
     <%= f.text_field :value, class: "form-control" %>
   </div>
 </div>
+
+<%= f.submit :"aria-hidden" => true, class: "hidden" %>
