--- a/app/views/things/new.html.erb
+++ b/app/views/things/new.html.erb
@@ -13,6 +13,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-    <button type="button" class="btn btn-primary a-form-commit">Save changes</button>
+    <button type="button" class="btn btn-primary a-form-commit">Create</button>
   </div>
 <% end %>
