Remove underline from link hover

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -3,3 +3,9 @@
 @import "bootstrap";
 @import "themes/sandstone/bootswatch.scss";
 
+.btn-clear {
+  &:hover, &:focus, &.focus {
+    color: $link-hover-color;
+    text-decoration: none;
+  }
+}
