--- a/app/assets/stylesheets/themes/sandstone/_variables.scss
+++ b/app/assets/stylesheets/themes/sandstone/_variables.scss
@@ -35,7 +35,7 @@ $link-color:            $brand-success;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      darken($link-color, 10%);
 //** Link hover decoration.
-$link-hover-decoration: underline;
+$link-hover-decoration: underline !default;
 
 
 //== Typography
