--- a/app/views/things/edit.html.erb
+++ b/app/views/things/edit.html.erb
@@ -12,10 +12,13 @@
     </div>
   </div>
   <div class="modal-footer">
-    <%= link_to(@thing, confirm: "Are you sure you want to delete #{@thing.name}?", method: :delete, title: "Delete #{@thing.name}", class: "btn btn-danger" ) do %>
-      <%= icon('minus-square-o', 'Delete')  %>
-    <% end %>&nbsp;
-    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-    <button type="button" class="btn btn-primary a-form-commit">Save changes</button>
+    <%= link_to "Cancel", '#', :"data-dismiss" => "modal", class: "btn btn-sm btn-clear" %>
+    <%=
+      link_options = {data: {confirm: "Are you sure you want to delete #{@thing.name}?"},
+        method: :delete, title: "Delete #{@thing.name}", class: "btn btn-danger btn-sm"}
+      (link_options[:disabled] = 'disabled') if @thing.children.any?
+      link_to "Delete", @thing, link_options
+    %>
+    <%= f.submit 'Update', class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
