--- a/app/views/things/new.html.erb
+++ b/app/views/things/new.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-    <button type="button" class="btn btn-primary a-form-commit">Create</button>
+    <%= link_to "Cancel", '#', :"data-dismiss" => "modal", class: "btn btn-sm btn-clear" %>
+    <%= f.submit 'Create', class: "btn btn-primary btn-sm" %>
   </div>
 <% end %>
